--- a/package.json
+++ b/package.json
@@ -1,36 +1,72 @@
 {
-	"private": true,
-	"scripts": {
-	  "build": "pnpm --filter helicone-azure-provider run build",
-	  "clean": "pnpm --filter helicone-azure-provider run clean",
-	  "dev": "pnpm --filter helicone-azure-provider run dev",
-	  "lint": "pnpm --filter helicone-azure-provider run lint",
-	  "type-check": "pnpm --filter helicone-azure-provider run type-check",
-	  "prettier-check": "pnpm --filter helicone-azure-provider run prettier",
-	  "test": "pnpm --filter helicone-azure-provider run test"
-	},
-	"devDependencies": {
-	  "@typescript-eslint/eslint-plugin": "^7.9.0",
-	  "@typescript-eslint/parser": "^7.9.0",
-	  "eslint": "^8.57.0",
-	  "eslint-config-prettier": "^9.1.0",
-	  "eslint-plugin-import": "^2.29.1",
-	  "eslint-plugin-prettier": "^5.1.3",
-	  "eslint-plugin-simple-import-sort": "^12.1.0",
-	  "eslint-plugin-sort": "^3.0.2",
-	  "eslint-plugin-unicorn": "^52.0.0",
-	  "eslint-plugin-unused-imports": "^3.2.0",
-	  "prettier": "^3.2.5",
-	  "vite-tsconfig-paths": "^4.3.2",
-	  "vitest": "^1.6.0"
-	},
-	"homepage": "https://github.com/anishanne/helicone-azure-provider",
-	"repository": {
-	  "type": "git",
-	  "url": "git+https://github.com/anishanne/helicone-azure-provider.git"
-	},
-	"bugs": {
-	  "url": "https://github.com/anishanne/helicone-azure-provider/issues"
-	},
-	"license": "Apache License"
-  }
+  "name": "helicone-azure-provider",
+  "version": "0.0.1",
+  "license": "Apache-2.0",
+  "sideEffects": false,
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist/**/*"
+  ],
+  "scripts": {
+    "build": "tsup",
+    "clean": "rm -rf dist",
+    "dev": "tsup --watch",
+    "lint": "eslint \"./**/*.ts*\"",
+    "type-check": "tsc --noEmit",
+    "prettier-check": "prettier --check \"./**/*.ts*\"",
+    "test": "pnpm test:node && pnpm test:edge",
+    "test:edge": "vitest --config vitest.edge.config.js --run",
+    "test:node": "vitest --config vitest.node.config.js --run"
+  },
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
+  },
+  "dependencies": {
+    "@ai-sdk/openai": "0.0.34",
+    "@ai-sdk/provider": "0.0.11",
+    "@ai-sdk/provider-utils": "1.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18",
+	"@typescript-eslint/eslint-plugin": "^7.9.0",
+	"@typescript-eslint/parser": "^7.9.0",
+	"eslint": "^8.57.0",
+	"eslint-config-prettier": "^9.1.0",
+	"eslint-plugin-import": "^2.29.1",
+	"eslint-plugin-prettier": "^5.1.3",
+	"eslint-plugin-simple-import-sort": "^12.1.0",
+	"eslint-plugin-sort": "^3.0.2",
+	"eslint-plugin-unicorn": "^52.0.0",
+	"eslint-plugin-unused-imports": "^3.2.0",
+	"prettier": "^3.2.5",
+    "tsup": "^8",
+    "typescript": "5.1.3",
+	"vite-tsconfig-paths": "^4.3.2",
+	"vitest": "^1.6.0",
+    "zod": "3.23.8"
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "homepage": "https://sdk.vercel.ai/docs",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vercel/ai.git"
+  },
+  "bugs": {
+    "url": "https://github.com/vercel/ai/issues"
+  },
+  "keywords": [
+    "ai"
+  ]
+}
