--- a/tools/provider-utils/package.json
+++ b/tools/provider-utils/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "helicone-azure-provider",
-  "version": "0.0.1",
+  "name": "@ai-sdk/provider-utils",
+  "version": "1.0.0",
   "license": "Apache-2.0",
   "sideEffects": false,
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist/**/*"
+    "dist/**/*",
+    "test/dist/**/*"
   ],
   "scripts": {
     "build": "tsup",
-    "clean": "rm -rf dist",
+    "clean": "rm -rf dist && rm -rf test/dist",
     "dev": "tsup --watch",
     "lint": "eslint \"./**/*.ts*\"",
     "type-check": "tsc --noEmit",
     "prettier-check": "prettier --check \"./**/*.ts*\"",
-    "prettier-fix": "prettier --write \"**/*.{js,ts,tsx,md,mdx}\"",
     "test": "pnpm test:node && pnpm test:edge",
     "test:edge": "vitest --config vitest.edge.config.js --run",
     "test:node": "vitest --config vitest.node.config.js --run"
@@ -27,30 +27,35 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
+    },
+    "./test": {
+      "types": "./test/dist/index.d.ts",
+      "import": "./test/dist/index.mjs",
+      "module": "./test/dist/index.mjs",
+      "require": "./test/dist/index.js"
     }
   },
   "dependencies": {
-    "@ai-sdk/openai": "0.0.34",
-    "@ai-sdk/provider": "0.0.11"
+    "@ai-sdk/provider": "0.0.11",
+    "eventsource-parser": "1.1.2",
+    "nanoid": "3.3.6",
+    "secure-json-parse": "2.7.0"
   },
   "devDependencies": {
     "@types/node": "^18",
-	"@typescript-eslint/eslint-plugin": "^7.9.0",
-	"@typescript-eslint/parser": "^7.9.0",
-	"eslint": "^8.57.0",
-	"eslint-config-prettier": "^9.1.0",
-	"eslint-plugin-import": "^2.29.1",
-	"eslint-plugin-prettier": "^5.1.3",
-	"eslint-plugin-simple-import-sort": "^12.1.0",
-	"eslint-plugin-sort": "^3.0.2",
-	"eslint-plugin-unicorn": "^52.0.0",
-	"eslint-plugin-unused-imports": "^3.2.0",
-	"prettier": "^3.2.5",
+    "@vercel/ai-tsconfig": "workspace:*",
+    "msw": "2.3.1",
     "tsup": "^8",
     "typescript": "5.1.3",
-	"vite-tsconfig-paths": "^4.3.2",
-	"vitest": "^1.6.0",
     "zod": "3.23.8"
+  },
+  "peerDependencies": {
+    "zod": "^3.0.0"
+  },
+  "peerDependenciesMeta": {
+    "zod": {
+      "optional": true
+    }
   },
   "engines": {
     "node": ">=18"
