--- a/package.json
+++ b/package.json
@@ -31,25 +31,22 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "0.0.34",
-    "@ai-sdk/provider": "0.0.11"
+    "@ai-sdk/provider": "0.0.11",
+    "@ai-sdk/provider-utils": "1.0.0",
+    "@edge-runtime/vm": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^18",
-	"@typescript-eslint/eslint-plugin": "^7.9.0",
-	"@typescript-eslint/parser": "^7.9.0",
-	"eslint": "^8.57.0",
-	"eslint-config-prettier": "^9.1.0",
-	"eslint-plugin-import": "^2.29.1",
-	"eslint-plugin-prettier": "^5.1.3",
-	"eslint-plugin-simple-import-sort": "^12.1.0",
-	"eslint-plugin-sort": "^3.0.2",
-	"eslint-plugin-unicorn": "^52.0.0",
-	"eslint-plugin-unused-imports": "^3.2.0",
-	"prettier": "^3.2.5",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
+    "@vercel/ai-tsconfig": "workspace:*",
+    "eslint": "^8.57.0",
+    "eslint-config-vercel-ai": "workspace:*",
+    "prettier": "^3.2.5",
     "tsup": "^8",
     "typescript": "5.1.3",
-	"vite-tsconfig-paths": "^4.3.2",
-	"vitest": "^1.6.0",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.6.0",
     "zod": "3.23.8"
   },
   "engines": {
