--- a/package.json
+++ b/package.json
@@ -39,9 +39,8 @@
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
-    "@vercel/ai-tsconfig": "workspace:*",
     "eslint": "^8.57.0",
-    "eslint-config-vercel-ai": "workspace:*",
+    "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.2.5",
     "tsup": "^8",
     "typescript": "5.1.3",
