--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,26 @@
 {
-	"extends": "./node_modules/@vercel/ai-tsconfig/react-library.json",
-	"compilerOptions": {
-	  "target": "ES2018",
-	  "stripInternal": true
+	"$schema": "https://json.schemastore.org/tsconfig",
+  "compilerOptions": {
+    "composite": false,
+    "declaration": true,
+    "declarationMap": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "inlineSources": false,
+    "isolatedModules": true,
+    "moduleResolution": "node",
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "preserveWatchOutput": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "types": ["@types/node", "vitest/globals"],
+    "jsx": "react-jsx",
+    "lib": ["dom", "ES2015"],
+    "module": "ESNext",
+    "target": "ES2018",
+    "stripInternal": true
 	},
 	"include": ["."],
 	"exclude": ["dist", "build", "node_modules"]
-  }
+}
